force-app/main/default/src/objects/PJN_Transaction_Log__e/PJN_Transaction_Log__e.object-meta.xml
<CustomObject>
    <description>Transaction log events deliver logs.</description>
    <label>Transaction Log</label>
    <pluralLabel>Transaction Logs</pluralLabel>
</CustomObject>