force-app/main/default/src/objects/PJN_Transaction_Log__e/fields/PJN_Callout_Request__c.field-meta.xml
<CustomField>
    <fullName>PJN_Callout_Request__c</fullName>
    <label>Callout request</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>