force-app/main/default/src/objects/PJN_Transaction_Log__e/fields/PJN_Incoming_URL__c.field-meta.xml
<CustomField>
    <fullName>PJN_Incoming_URL__c</fullName>
    <label>Incoming URL</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>