force-app/main/default/src/objects/PJN_Transaction_Log__e/fields/PJN_Level__c.field-meta.xml
<CustomField>
    <fullName>PJN_Level__c</fullName>
    <description>Log level</description>
    <label>Level</label>
    <length>10</length>
    <required>true</required>
    <type>Text</type>
</CustomField>