force-app/main/default/src/objects/PJN_Transaction_Log__e/fields/PJN_Record_Related__c.field-meta.xml
<CustomField>
    <fullName>PJN_Record_Related__c</fullName>
    <label>Record Related</label>
    <length>18</length>
    <type>Text</type>
</CustomField>