force-app/main/default/src/objects/PJN_Transaction_Log__e/fields/PJN_Running_User__c.field-meta.xml
<CustomField>
    <fullName>PJN_Running_User__c</fullName>
    <label>Running User</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>